--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,10 @@
   <body>
     <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <main>
+      <load ="partials/hero.html" />
+      <load ="partials/vite-promo.html" />
+    </main>
 
     <script type="module" src="./main.js"></script>
   </body>
